Bug 641436 - Don't call Script{Prologue,Epilogue} when resuming/yielding a generator (r=dvander)